--- a/theory.tex
+++ b/theory.tex
@@ -98,7 +98,7 @@ $$ - \kk (\kk \cdot \E) \equiv
 	\left[\left(\begin{array}{ccc} k_x & k_y & k_z \end{array} \right) \cdot
 	\left(\begin{array}{c} E_x \\ E_y \\ E_z \end{array} \right)\right] 
 		\equiv
-	-\left(\begin{array}{ccc} -k_x^2 & -k_x k_y & -k_x k_z \\ -k_y k_x & -k_y^2 & -k_y k_z \\ -k_z k_x & -k_z k_y & -k_z^2 \end{array} \right) \cdot  
+	\left(\begin{array}{ccc} -k_x^2 & -k_x k_y & -k_x k_z \\ -k_y k_x & -k_y^2 & -k_y k_z \\ -k_z k_x & -k_z k_y & -k_z^2 \end{array} \right) \cdot  
 	\left(\begin{array}{c} E_x \\ E_y \\ E_z \end{array} \right),
 	$$
 %$$ k^2 \E \equiv 
@@ -262,12 +262,14 @@ A related mathematical proof of Kramers-Kronig relations can be derived from the
 \paragraph{Lower and upper polariton branches of transverse waves}  % TODO%{{{
 Returning to the derivation of dispersion relations, we start with modifying the constitutive relation (\ref{eq_ce}) to a plane wave propagating in a medium:
 \begin{equation}		\D := \varepsilon_0\varepsilon_r(\omega)	\E, \quad\quad\quad						\B := \mu_0\mu_r(\omega)		\HH,				 \label{eq_ce2}\end{equation}
-with the relative permittivity $\varepsilon_r(\omega)$ and permeability $\mu_r(\omega)$ being two dimensionless functions of frequency, defined in Eq. (\ref{eq_lorentz_eps}, \ref{eq_lorentz_mu}). This results in the dispersion curve for the transverse electromagnetic wave deviating from the original light line in Fig. \ref{fg_dispersion_vacuum}. 
-In the simplest example of a single resonance with negligible losses, as in Fig. \ref{fg_dispersion_polariton} % TODO red? line
+with the relative permittivity $\varepsilon_r(\omega)$ and permeability $\mu_r(\omega)$ being two dimensionless functions of frequency, defined in Eq. (\ref{eq_lorentz_eps}, \ref{eq_lorentz_mu}). This results in the dispersion curve for the transverse electromagnetic wave 
+ \begin{equation} k = \sqrt{\varepsilon_0 \mu_0} \sqrt{\varepsilon_{r}(\omega) \mu_{r}(\omega)}\;\omega = \sqrt{\varepsilon_{r}(\omega) \mu_{r}(\omega)}\; \frac{\omega}{c}, \label{eq_dispeq_vac}\end{equation}
+deviating from the original light line in Fig. \ref{fg_dispersion_vacuum}. 
+In the simplest example of a single electric resonance with negligible losses, as in Fig. \ref{fg_dispersion_polariton} % TODO red? line
 , the curve is divided into two separate branches. The \textit{lower polariton branch} is below the resonance frequency $\omega_0$ and is characterized by the Lorentz oscillator being in phase with the electric field.
 %TODO FIGURE dispersion curve - scan over resonator strength\\
 
-Above $\omega_0$, the dipoles of the Lorentz oscillator can no more follow the electric field and are opposite to the electric field, thus pushing the permittivity below zero. With further increase of the frequency, the permittivity crosses zero at the frequency $\omega_{\text{L}}$. %, > \omega_0 which allows the transverse wave to propagate. 
+Above $\omega_0$, the dipoles of the Lorentz oscillator can no more follow the electric field and are opposite to it, thus the response of the medium is negative. With further increase of the frequency, the permittivity crosses zero at the frequency $\omega_{\text{L}}$. %, > \omega_0 which allows the transverse wave to propagate. 
 where the \textit{upper polariton branch} starts. In case of a Lorentz oscillator unaffected by the presence of others, the difference $\omega_{\text{L}} - \omega_0$ can be computed from the magnitude of the oscillator (using the Lydanne-Sachs-Teller relation).\cite{klingshirn2007semiconductor}
 
 The same behaviour is observed for a single resonance in the permeability $\mu_r(\omega)$, and will be typical also for the spectra of resonances of macroscopic structures described later.
@@ -278,11 +280,12 @@ When losses are present, the lower and upper polariton branches are connected by
 %}}}
 \paragraph{Longitudinal waves in dispersive media} %{{{
 The solution of Maxwell equations for a harmonic wave, 
-$$ \quad\quad\quad\quad\quad - \kk (\kk \cdot \E)      +          k^2 \E            = +\mu_0 \varepsilon_0 \omega^{2} \E, \quad\quad\quad\quad\quad\text{(\ref{eq_me4} again)}$$
+\begin{equation} - \kk (\kk \cdot \E)      +          k^2 \E            = +\varepsilon_0 \mu_0 \varepsilon_r(\omega) \mu_r(\omega)\; \omega^{2} \E, \label{eq_disp_loc}\end{equation}
 also allows the existence of longitudinal waves with electric field parallel to the wave vector $\E || \kk$. If $k>0$, such waves can have nonzero solution only when either $\varepsilon_r(\omega)' = 0$, or $\mu_r(\omega)' = 0$, and therefore in local media their dispersion curve would be a horizontal line at $\omega = \omega_{\text{L}}$, independent of $k$. This would be equivalent to a standing oscillation that keeps the amplitude envelope that was originally excited. 
 
-Different mechanisms can lead to $\varepsilon_r(\omega)' = 0$, some of which introduce relatively low losses at the corresponding $\omega_{\text{L}}$; namely lattice vibrations in nonconductive crystals or electrons in inductive media (like metals and dilute plasma). At the interface of such media with vacuum or air, another type of waves can be excited with an intermediate frequency $\omega < \omega_{\text{L}}$ that can not propagate in either of the bulk medium. The dispersion curve of such waves is not flat, allowing them to propagate along the interface.
+Different physical phenomena can lead to $\varepsilon_r(\omega)' = 0$, some of which introduce relatively low losses at the corresponding $\omega_{\text{L}}$; namely lattice vibrations in nonconductive crystals or electrons in inductive media (like metals and dilute plasma). At the interface of such media with vacuum or air, another type of waves can be excited with an intermediate frequency $\omega < \omega_{\text{L}}$ that can not propagate in either of the bulk medium. The dispersion curve of such waves is not flat, allowing them to propagate along the interface.
 Depending on the mechanism, they are known as \textit{surface phonon-polaritons} or \textit{surface plasmons}, respectively. 
+% Are there surface magnons?
 % Are there any metamaterials designed for longitudinal waves?
 %}}}
 
@@ -444,6 +447,7 @@ The trivial extension of the local medium description to the nonlocal one could 
 % TODO add böhne nägerl reker ulbrich: evidence of spatial dispersion in the dielectric response of continuum states in gaas, 183e WE-Heraeus-Seminar nonlin opt and excit kinetics, noeks, graal-muritz 1997, Germany
 %}}}
 \paragraph{Magnetic effects can be described by electric displacement}%{{{
+%% TODO write about "EDB model"
 Instead, we will show here that the magnetic response can be fully expressed by a certain form of $\varepsilon_r(\omega, \kk)$ dependence on $\kk$. In the following theory, the spatial-dispersive function $\varepsilon_r(\omega, \kk)$ will consist of
 \begin{enumerate}
  \item{the component caused by the immediate electric response of vacuum,} 
@@ -503,6 +507,19 @@ The downsides of the spatial-dispersive model of media is that it is more compli
 \subsection{Bloch theorem}
 %In a given time the wave in a periodic medium takes on the form of Bloch wave (\ref{eq_bloch}): 
  %$\mathbf{E}(\mathbf{r}) = \mathrm{e}^{\mathrm{i}Kz} \cdot \mathbf{u}(\mathbf{r})$, i.e. it is a product of a harmonic \textit{envelope} and a cell-periodic \textit{mode}. Computing the dispersion curves involves computing the envelope wavenumber $K = K(f)$ for each frequency $f$ in the desired spectrum. The information about the mode $\mathbf{u}(\mathbf{r})$ is not used and instead the metamaterial cell is treated as if it was a homogeneous medium -- therefore this procedure is also called \textit{homogenisation}.
+
+\paragraph{The Bloch-Floquet theorem}%{{{
+% TODO define periodicity
+
+The important Bloch-Floquet theorem states that while the wave in periodic medium does not have to be periodic anymore, it is a product of two periodic functions:
+\begin{equation} \E(t, \rr) = \mathrm{e}^{\mathrm{i} Kz - 2\pi \mathrm{i} f t} \cdot \mathbf{u}(\rr), \text{ where } \mathbf{u}(\rr) = \mathbf{u}(\rr+a\mathbf{z}) = \mathbf{u}(\rr+2a\mathbf{z}) = \ldots, \label{eq_bloch}\end{equation} 
+The $\mathbf{u}(\rr)$ function has the same periodicity as the structure. It is generally a complex vector function so it not only alters the direction and magnitude of $\E$ (or  $\HH$), but can also introduce a \textit{phase modulation} of the wave in each unit cell. Note that the capital $\KK$ is used to distinguish the wave vector of the Bloch wave envelope from the wave vector $\kk$ in free space. Note this theorem does not determine how the shape of $\mathbf{u}(\rr)$ nor the direction and magnitude of $\KK$, it only states they do exist.
+% TODO proof /home/filip/PhD/Sources_MM_theory/Bloch_Theorem_Proof.pdf
+% TODO example illustration of Bloch wave -> plotted in Python
+
+%}}}
+
+
 \paragraph{Virtual periodicity and ambiguity of the mode function}%{{{
 \add{
 The simplest "structure" to be started with is surely the empty vacuum with homogeneous $\varepsilon := 1$ and $\mu := 1$. One particularly simple solution of the Maxwell equations in vacuum is the planar wave propagating along the $z$-axis, defined by Eq. (\ref{eq_pw2}).
@@ -542,25 +559,14 @@ Although maybe less instructive, usually the \textit{folded} bands are plotted i
 \begin{figure} \caption{img/dispersion\_curve\_vacuum.pdf}  \centering \includegraphics[width=8cm]{img/dispersion_curve_vacuum.pdf} \end{figure} \clearpage
 \begin{figure} \caption{img/dispersion\_curve\_vacuum\_virtperiodic.pdf} \centering \includegraphics[width=8cm]{img/dispersion_curve_vacuum_virtperiodic.pdf} \end{figure} \clearpage
 %}}}
-\subsection{Reciprocal space and isofrequency contours}
+\subsection{Reciprocal space, Brillouin zones and isofrequency contours}
 \subsection{Group velocity, phase velocity and their signs}
 %\cite{Mikki}
 % -> signal velocity, Group velocity, phase velocity and their signs \cite{Mikki}, group velocity can be negative or superluminal - no problem here?
 % -> "Hopping model" -- individual oscillators with frequency more-or-less dependent on boundary conditions 
 %			 (Neumann ... Gamma point ... "dE/dx=0"  vs.  Dirichlet ... M-point ... "E=0")
 \subsection{Antiresonances and problems with local effective parameters}
-\subsection{EDB model for periodic structures}
 
-\paragraph{The Bloch-Floquet theorem}%{{{
-% TODO define periodicity
-
-The important Bloch-Floquet theorem states that while the wave in periodic medium does not have to be periodic anymore, it is a product of two periodic functions:
-\begin{equation} \E(t, \rr) = \mathrm{e}^{\mathrm{i} Kz - 2\pi \mathrm{i} f t} \cdot \mathbf{u}(\rr), \text{ where } \mathbf{u}(\rr) = \mathbf{u}(\rr+a\mathbf{z}) = \mathbf{u}(\rr+2a\mathbf{z}) = \ldots, \label{eq_bloch}\end{equation} 
-The $\mathbf{u}(\rr)$ function has the same periodicity as the structure. It is generally a complex vector function so it not only alters the direction and magnitude of $\E$ (or  $\HH$), but can also introduce a \textit{phase modulation} of the wave in each unit cell. Note that the capital $\KK$ is used to distinguish the wave vector of the Bloch wave envelope from the wave vector $\kk$ in free space. Note this theorem does not determine how the shape of $\mathbf{u}(\rr)$ nor the direction and magnitude of $\KK$, it only states they do exist.
-% TODO proof /home/filip/PhD/Sources_MM_theory/Bloch_Theorem_Proof.pdf
-% TODO example illustration of Bloch wave -> plotted in Python
-
-%}}}
 
 % in the following we will plot the unfolded bands instead as it seems to give clearer physical interpretation of data.
 % -> TODO doplnit "PhC book": dispersní křivky atd.
